<resources>
    <string name="app_name">SmartBank</string>
    <string name="title_activity_admin_dashboard">Admin_Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin Sfar</string>
    <string name="nav_header_subtitle">abdelmatine.sfar@admin.tn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="register">AJOUTER \nUTILISATEUR</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="confirmer">Modifier</string>
    <string name="details_de_l_utilisateur">Details De L\'utilisateur</string>
    <string name="delete">Supprimer</string>
    <string name="mots_de_passe">Mots de passe</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="role">Role</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="ajoutez">AJOUTEZ</string>
</resources>