<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_editor_absoluteX="1dp"
    app:layout_editor_absoluteY="1dp"
    android:background="@drawable/login_bk"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/et_role_add"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="520dp"
        android:hint="@string/role"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_username_add"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="460dp"
        android:hint="@string/nom_d_utilisateur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/et_image_add"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="390dp"
        android:hint="IMAGE//TO-DO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_nom_add"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:hint="@string/nom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_prenom_add"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:hint="@string/prenom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_pass_add"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="320dp"
        android:hint="@string/mots_de_passe"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_user_add"
        style="@style/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="85dp"
        android:text="@string/ajoutez"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_role_add"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
