<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_editor_absoluteX="1dp"
    app:layout_editor_absoluteY="1dp"
    android:background="@drawable/background"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DetailActivity">


    <EditText
        android:id="@+id/et_role_fetch"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="520dp"
        android:hint="Role"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_username_fetch"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="460dp"
        android:hint="Nom d'utilisateur"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_image_fetch"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="390dp"
        android:hint="IMAGE//TO-DO"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        style="@style/loginHeader"
        android:layout_width="241dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/details_de_l_utilisateur"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_nom_fetch"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:hint="Nom"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_prenom_fetch"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:hint="Prenom"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_pass_fetch"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="320dp"
        android:hint="Mots de passe"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_user_delete"
        style="@style/delete_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="60dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_role_fetch"
        app:layout_constraintVertical_bias="0.978"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn_user_mod"
        style="@style/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="60dp"
        android:text="@string/confirmer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_role_fetch"
        app:layout_constraintVertical_bias="0.978"
        tools:ignore="UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>